# fastest-rust

./: Cargo.toml
src/: main.rs
