[package]
name = "fastest-rust"
version = "0.1.0"
authors = ["Soveu <marx.tomasz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
tokio = { features = ["process", "macros"], git = "https://github.com/tokio-rs/tokio", branch = "master" }


